--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Piklopedia</string>
     <string name="titulo_toolbar">Piklopedia</string>
+    <string name="titulo_detalle">Detalle Pikmin</string>
+    <string name="pikmin_descripcion">descricion.......</string>
 </resources>
