--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="titulo_detalle">Detalle Pikmin</string>
     <string name="pikmin_descripcion">descricion.......</string>
     <string name="opcion_acerca">Acerca de...</string>
-    <string name="opcion_ajustes">Ajsutes</string>
+    <string name="opcion_ajustes">Ajustes</string>
+    <string name="texto_dialogo">Aplicación desarrollada por %1$s. Versión 1.0.</string>
 
     <string name="pikmin_rojo">Resistente al fuego, gran fuerza ofensiva y alta adaptación a ambientes calurosos; útil en combates y para soportar altas temperaturas.</string>
     <string name="pikmin_amarillo">Conduce electricidad y resiste exposiciones eléctricas; cavadores rápidos y capaces de alcanzar gran altura al ser lanzados.</string>
