--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,15 +12,15 @@
     <string name="texto_dialogo">Aplicación desarrollada por %1$s. Versión 1.0.</string>
     <string name="titulo_configuracion">Configuración</string>
 
-    <string name="label_idioma">Idiomas</string>
+    <string name="label_idioma">Selcciona idioma</string>
     <string name="idioma_es">Español</string>
     <string name="idioma_en">Inglés</string>
-    <string name="desc_switch_idioma">Cambiar idioma</string>
+ 
 
-    <string name="label_tema">Tema</string>
+    <string name="label_tema">Seleciona el tema</string>
     <string name="tema_claro">Claro</string>
     <string name="tema_oscuro">Oscuro</string>
-    <string name="desc_switch_tema">Cambiar tema</string>
+
 
     <string name="pikmin_rojo">Resistente al fuego, gran fuerza ofensiva y alta adaptación a ambientes calurosos; útil en combates y para soportar altas temperaturas.</string>
     <string name="pikmin_amarillo">Conduce electricidad y resiste exposiciones eléctricas; cavadores rápidos y capaces de alcanzar gran altura al ser lanzados.</string>
