--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,14 +22,25 @@
     <string name="tema_oscuro">Oscuro</string>
 
 
-    <string name="pikmin_rojo">Resistente al fuego, gran fuerza ofensiva y alta adaptación a ambientes calurosos; útil en combates y para soportar altas temperaturas.</string>
-    <string name="pikmin_amarillo">Conduce electricidad y resiste exposiciones eléctricas; cavadores rápidos y capaces de alcanzar gran altura al ser lanzados.</string>
-    <string name="pikmin_azul">Posee branquias que permiten respirar y actuar bajo el agua; excelente nadador y eficaz en entornos acuáticos.</string>
-    <string name="pikmin_blanco">Pequeño y muy rápido, con veneno natural y resistencia a toxinas; adecuado para tareas de velocidad y como creador de daño por veneno.</string>
-    <string name="pikmin_morado">Muy pesado y extremadamente fuerte, con alta capacidad de carga; lento pero capaz de causar gran daño físico y mover grandes pesos.</string>
-    <string name="pikmin_petreo">Cuerpo rocoso y altamente resistente; ideal para tareas de ruptura de obstáculos y para absorber daño físico.</string>
-    <string name="pikmin_alado">Capacidad de vuelo y gran agilidad en el aire; movilidad superior aunque con ataques de menor potencia.</string>
-    <string name="pikmin_gelido">Genera y mantiene hielo, inmunidad al frío y capacidad para congelar zonas; vulnerable al fuego.</string>
-    <string name="pikmin_luminoso">Activo en ambientes nocturnos y subterráneos, con habilidades únicas de movimiento y agrupamiento que permiten formas de luz y teletransportación colectiva.</string>
+    <string name="pikmin_rojo">Pikmin rubrus</string>
+    <string name="pikmin_amarillo">Pikmin auribus</string>
+    <string name="pikmin_azul">Pikmin caerula</string>
+    <string name="pikmin_blanco">Pikmin venalbius</string>
+    <string name="pikmin_morado">Pikmin violaceus</string>
+    <string name="pikmin_petreo">Pikmin granitus</string>
+    <string name="pikmin_alado">Pikmin volucris</string>
+    <string name="pikmin_gelido">Pikmin glacialis</string>
+    <string name="pikmin_luminoso">Pikmin luminis</string>
+
+
+        <string name="pikmin_rojo_descripcion">Resistente al fuego, gran fuerza ofensiva y alta adaptación a ambientes calurosos; útil en combates y para soportar altas temperaturas.</string>
+        <string name="pikmin_amarillo_descripcion">Conduce electricidad y resiste exposiciones eléctricas; cavadores rápidos y capaces de alcanzar gran altura al ser lanzados.</string>
+        <string name="pikmin_azul_descripcion">Posee branquias que permiten respirar y actuar bajo el agua; excelente nadador y eficaz en entornos acuáticos.</string>
+        <string name="pikmin_blanco_descripcion">Pequeño y muy rápido, con veneno natural y resistencia a toxinas; adecuado para tareas de velocidad y como creador de daño por veneno.</string>
+        <string name="pikmin_morado_descripcion">Muy pesado y extremadamente fuerte, con alta capacidad de carga; lento pero capaz de causar gran daño físico y mover grandes pesos.</string>
+        <string name="pikmin_petreo_descripcion">Cuerpo rocoso y altamente resistente; ideal para tareas de ruptura de obstáculos y para absorber daño físico.</string>
+        <string name="pikmin_alado_descripcion">Capacidad de vuelo y gran agilidad en el aire; movilidad superior aunque con ataques de menor potencia.</string>
+        <string name="pikmin_gelido_descripcion">Genera y mantiene hielo, inmunidad al frío y capacidad para congelar zonas; vulnerable al fuego.</string>
+        <string name="pikmin_luminoso_descripcion">Activo en ambientes nocturnos y subterráneos, con habilidades únicas de movimiento y agrupamiento que permiten formas de luz y teletransportación colectiva.</string>
 
 </resources>
